[package]
name = "tcp-spawner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
os_pipe = "1.1.4"
tokio-util = { version = "0.7.8", features = ["compat"] }
futures-util = { version = "0.3.28", features = ["io"] }
nix = { version = "0.26.2", features = ["signal"] }